...
        android:layout_height="match_parent">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_view" />
        <EditText
            android:maxLines="3"
            android:id="@+id/editTextToDo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:autofillHints="false"
            android:hint="@string/hint_add_todo"
...
            app:layout_constraintBottom_toBottomOf="@+id/buttonShowDatePickerDialog"
            app:layout_constraintStart_toEndOf="@+id/buttonShowDatePickerDialog"
            app:layout_constraintTop_toTopOf="@+id/buttonShowDatePickerDialog"
            tools:text="05/05/2021" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSaveToDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_layout_margin"
            android:contentDescription="@string/description_add_todo"
            android:src="@drawable/ic_save_black_24"
            app:layout_constraintBottom_toBottomOf="parent"
...
