...
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_view" />
        <EditText
            android:id="@+id/editTextToDoUpdating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:autofillHints="false"
            android:inputType="textMultiLine"
...
            android:textSize="@dimen/editText_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/buttonShowDatePickerDialogUpdating"
            app:layout_constraintStart_toEndOf="@+id/buttonShowDatePickerDialogUpdating"
            app:layout_constraintTop_toTopOf="@+id/buttonShowDatePickerDialogUpdating"
            tools:text="05/05/2021" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabUpdateToDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_layout_margin"
            android:contentDescription="@string/description_add_todo"
            android:src="@drawable/ic_save_black_24"
            app:layout_constraintBottom_toBottomOf="parent"
...
